# complianceMCP

./: .gitignore  README.md  pyproject.toml  requirements.txt
metadata/: ISO_14708_1.json
src/: mcp_librarian.py
